--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
         /* Tech stack tag style */
         .tech-tag {
-            @apply inline-block bg-slate-700 text-sky-300 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded-full;
+            @apply inline-block bg-slate-700 text-sky-300 text-xs font-semibold mr-2 mb-2 px-2.5 py-0.5 rounded-full;
         }
     </style>
 </head>
@@ -145,7 +145,7 @@
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
                     <h3 class="text-lg font-semibold text-white">Korean Language Instructor <span class="text-sky-400">@ Language Success School</span></h3>
-                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Aug 2025 – Present</time>
+                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">July 2025 – Present</time>
                     <p class="text-slate-400 text-sm" data-lang="exp_language">Conduct Korean language classes, designing lesson plans and creating engaging materials to foster language acquisition and cultural understanding.</p>
                 </div>
                 <div class="mb-10 ml-8">
@@ -157,7 +157,7 @@
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
                     <h3 class="text-lg font-semibold text-white">Retail Associate & Store Launch Team <span class="text-sky-400">@ Burlington</span></h3>
-                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Dec 2023 – Aug 2025</time>
+                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Dec 2023 – July 2025</time>
                     <p class="text-slate-400 text-sm" data-lang="exp_burlington">Played a key role in the successful launch of a new retail location. Gained hands-on experience across all launch phases, from warehouse logistics and floor-set organization to providing bilingual customer service as a cashier, honing skills in operational efficiency and teamwork.</p>
                 </div>
                 <div class="mb-10 ml-8">
@@ -226,6 +226,11 @@
                         <div class="mt-4 text-slate-400 space-y-2" data-lang="case1_desc">
                             <p>My journey started with a fascination for turning ideas into reality. In the demanding automotive R&D world, I learned the non-negotiable value of precision. This purely technical role taught me that getting the details right is the foundation of any successful project.</p>
                         </div>
+                        <div class="mt-4">
+                            <span class="tech-tag">Precision Engineering</span>
+                            <span class="tech-tag">CAD/CAM</span>
+                            <span class="tech-tag">Prototyping</span>
+                        </div>
                     </div>
                 </div>
 
@@ -238,6 +243,11 @@
                         <p class="text-sky-400 mt-1 font-semibold" data-lang="case2_role">Artillery Maintenance Team Leader</p>
                         <div class="mt-4 text-slate-400 space-y-2" data-lang="case2_desc">
                             <p>Leading a 4-technician maintenance team taught me that technical skill alone isn't enough. I had to not only solve problems but also train my team to do the same. This was my first real taste of teaching – the challenge of transferring complex knowledge clearly and effectively under pressure.</p>
+                        </div>
+                        <div class="mt-4">
+                            <span class="tech-tag">Team Leadership</span>
+                            <span class="tech-tag">Process Management</span>
+                            <span class="tech-tag">Technical Training</span>
                         </div>
                     </div>
                 </div>
@@ -252,6 +262,12 @@
                         <div class="mt-4 text-slate-400 space-y-2" data-lang="case3_desc">
                             <p>This role was a turning point. While managing a lab of over 50 machines, I <strong class="text-lg text-sky-400">developed and taught more than 10 new engineering workshops to over 100 students</strong>, covering everything from 3D printing to robotics. I also led a student team to build a 3D-printed robot arm and mentored university startups on prototyping. It was here I discovered my true passion: <strong class="text-lg text-sky-400">making complex technology accessible and empowering people through hands-on education.</strong></p>
                         </div>
+                        <div class="mt-4">
+                            <span class="tech-tag">Robotics</span>
+                            <span class="tech-tag">3D Printing</span>
+                            <span class="tech-tag">Curriculum Development</span>
+                            <span class="tech-tag">Mentorship</span>
+                        </div>
                     </div>
                 </div>
 
@@ -262,10 +278,17 @@
                     <div class="md:w-1/2">
                         <h3 class="text-2xl font-bold text-white" data-lang="case4_title">Chapter 4: The Confirmation</h3>
                         <p class="text-sky-400 mt-1 font-semibold" data-lang="case4_role">AI Researcher at UTRGV</p>
-                            <div class="mt-4 text-slate-400 space-y-2" data-lang="case4_desc">
+                        <div class="mt-4 text-slate-400 space-y-2" data-lang="case4_desc">
                             <p>As part of a USDA research project, I played a key role in the early stages of developing a honey bee monitoring system. My contributions included <strong class="text-sky-400">hardware redesign, creating a remote video recording script for data collection, labeling the collected data, and writing the initial code to train a bee detection model</strong> using TensorFlow on a Jetson Nano. This experience confirmed my ability to apply AI to solve real-world problems from the ground up.</p>
                         </div>
+                        <div class="mt-4">
+                            <span class="tech-tag">Computer Vision</span>
+                            <span class="tech-tag">Embedded Systems</span>
+                            <span class="tech-tag">Data Pipeline</span>
+                            <span class="tech-tag">TensorFlow</span>
+                        </div>
                         <div class="mt-4 space-x-4">
+                            <a href="https://miutrgv.github.io/research/bee-monitoring.html" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case4_link">View the Research Project </a>
                             <a href="https://ieeexplore.ieee.org/document/10903284" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case4_paper_link">View the Paper</a>
                         </div>
                     </div>
@@ -280,6 +303,11 @@
                         <p class="text-sky-400 mt-1 font-semibold" data-lang="case5_role">Retail Store Launch Team</p>
                         <div class="mt-4 text-slate-400 space-y-2" data-lang="case5_desc">
                             <p>Beyond engineering and code, I wanted to understand how a large-scale business operates from the ground up. Participating in the launch of a new Burlington store was a real-world MBA lesson. From organizing the warehouse to setting up the sales floor and finally serving the first customers, I saw firsthand how every detail, from logistics to teamwork under pressure, directly impacts the bottom line and customer satisfaction. <strong class="text-lg text-sky-400">It was a powerful reminder that successful systems, whether in technology or retail, are built on well-executed fundamentals.</strong></p>
+                        </div>
+                        <div class="mt-4">
+                            <span class="tech-tag">Retail Operations</span>
+                            <span class="tech-tag">Logistics</span>
+                            <span class="tech-tag">Teamwork</span>
                         </div>
                     </div>
                 </div>
@@ -315,6 +343,11 @@
                         <p class="text-sky-400 mt-1 font-semibold" data-lang="case7_role">Founder of the UTRGV AI Club</p>
                         <div class="mt-4 text-slate-400 space-y-2" data-lang="case7_desc">
                             <p>I founded the AI Club not just to make technology accessible, but also to <strong class="text-sky-400">bridge the information gap between academic theory and industry practice that I experienced as an undergraduate.</strong> It's a community built on the belief that anyone can innovate with the right guidance and a hands-on approach—a principle I discovered through my own path from engineer to educator.</p>
+                        </div>
+                        <div class="mt-4">
+                            <span class="tech-tag">Community Building</span>
+                            <span class="tech-tag">Leadership</span>
+                            <span class="tech-tag">EdTech</span>
                         </div>
                         <div class="mt-4">
                             <a href="https://sites.google.com/view/utrgvai" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case7_link">Visit the AI Club Website </a>
@@ -406,6 +439,7 @@
                 case4_title: "Chapter 4: The Confirmation",
                 case4_role: "AI Researcher at UTRGV",
                 case4_desc: `<p>As part of a USDA research project, I played a key role in the early stages of developing a honey bee monitoring system. My contributions included <strong class="text-sky-400">hardware redesign, creating a remote video recording script for data collection, labeling the collected data, and writing the initial code to train a bee detection model</strong> using TensorFlow on a Jetson Nano. This experience confirmed my ability to apply AI to solve real-world problems from the ground up.</p>`,
+                case4_link: "View the Research Project ",
                 case4_paper_link: "View the Paper",
                 case5_title: "Chapter 5: The Lesson in Grassroots Operations",
                 case5_role: "Retail Store Launch Team",
@@ -471,6 +505,7 @@
                 case4_title: "Capítulo 4: La Confirmación",
                 case4_role: "Investigador de IA en UTRGV",
                 case4_desc: `<p>Como parte de un proyecto de investigación del USDA, desempeñé un papel clave en las etapas iniciales del desarrollo de un sistema de monitoreo de abejas. Mis contribuciones incluyeron el <strong class="text-sky-400">rediseño de hardware, la creación de un script de grabación de video remota para la recolección de datos, el etiquetado de los datos recopilados y la escritura del código inicial para entrenar un modelo de detección de abejas</strong> usando TensorFlow en un Jetson Nano. Esta experiencia confirmó mi capacidad para aplicar la IA para resolver problemas del mundo real desde cero.</p>`,
+                case4_link: "Ver el Proyecto de Investigación ",
                 case4_paper_link: "Ver el Artículo",
                 case5_title: "Capítulo 5: La Lección en Operaciones de Base",
                 case5_role: "Equipo de Lanzamiento de Tienda Minorista",
@@ -536,6 +571,7 @@
                 case4_title: "4장: 확신",
                 case4_role: "UTRGV AI 연구원",
                 case4_desc: `<p>UTRGV에서 USDA 연구에 참여하며, 제 기술을 실제 문제 해결에 적용했습니다. 저는 <strong class="text-sky-400">Jetson Nano 기반의 꿀벌 모니터링 시스템 개발 초기 단계에 핵심적으로 기여</strong>했습니다. 하드웨어 재설계에 참여하고, 데이터 수집을 위한 원격 영상 녹화 코드를 작성했으며, 수집된 영상 데이터에 레이블을 달고, TensorFlow를 이용해 꿀벌 탐지 모델의 초기 코드를 작성했습니다. 이 경험은 AI 기술을 이용해 현실의 문제를 해결할 수 있다는 확신을 주었습니다.</p>`,
+                case4_link: "연구 프로젝트 보기 ",
                 case4_paper_link: "논문 보기",
                 case5_title: "5장: 현장 운영의 교훈",
                 case5_role: "리테일 스토어 런칭팀",
