--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
                     <h3 class="text-lg font-semibold text-white">Korean Language Instructor <span class="text-sky-400">@ Language Success School</span></h3>
-                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">aug 2025 – Present</time>
+                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">July 2025 – Present</time>
                     <p class="text-slate-400 text-sm" data-lang="exp_language">Conduct Korean language classes, designing lesson plans and creating engaging materials to foster language acquisition and cultural understanding.</p>
                 </div>
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
                     <h3 class="text-lg font-semibold text-white">AI Trainer (for LLMs) <span class="text-sky-400">@ Outlier</span></h3>
-                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Dec 2024 – Present</time>
+                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Dec 2024 – Aug 2025</time>
                     <p class="text-slate-400 text-sm" data-lang="exp_outlier">Currently fine-tuning large language models, focusing on creating clear and effective training data.</p>
                 </div>
                 <div class="mb-10 ml-8">
@@ -260,11 +260,12 @@
                         <h3 class="text-2xl font-bold text-white" data-lang="case3_title">Chapter 3: The Spark of Education</h3>
                         <p class="text-sky-400 mt-1 font-semibold" data-lang="case3_role">University Lab Technician & Instructor</p>
                         <div class="mt-4 text-slate-400 space-y-2" data-lang="case3_desc">
-                            <p>This role was a turning point. While managing a lab of over 50 machines, I <strong class="text-lg text-sky-400">developed and taught more than 10 new engineering workshops to over 100 students</strong>, covering everything from 3D printing to robotics. I also led a student team to build a 3D-printed robot arm and mentored university startups on prototyping. It was here I discovered my true passion: <strong class="text-lg text-sky-400">making complex technology accessible and empowering people through hands-on education.</strong></p>
+                            <p>This role was a turning point. While managing a lab of over 50 machines, I <strong class="text-lg text-sky-400">developed and taught more than 10 new engineering workshops to over 100 students</strong>, covering everything from 3D printing and robotics to drones. I also led a student team to build a 3D-printed robot arm and mentored university startups on prototyping. It was here I discovered my true passion: <strong class="text-lg text-sky-400">making complex technology accessible and empowering people through hands-on education.</strong></p>
                         </div>
                         <div class="mt-4">
-                            <span class="tech-tag">Robotics</span>
                             <span class="tech-tag">3D Printing</span>
+                            <span class="tech-tag">Robotics</span>
+                            <span class="tech-tag">Drones</span>
                             <span class="tech-tag">Curriculum Development</span>
                             <span class="tech-tag">Mentorship</span>
                         </div>
@@ -417,7 +418,7 @@
                 experience_title: "Professional Experience",
                 experience_subtitle: "A timeline of my key roles and responsibilities.",
                 exp_language: "Conduct Korean language classes, designing lesson plans and creating engaging materials to foster language acquisition and cultural understanding.",
-                exp_outlier: "Currently fine-tuning large language models, focusing on creating clear and effective training data.",
+                exp_outlier: "Fine-tuned large language models, focusing on creating clear and effective training data.",
                 exp_burlington: "Played a key role in the successful launch of a new retail location. Gained hands-on experience across all launch phases, from warehouse logistics and floor-set organization to providing bilingual customer service as a cashier, honing skills in operational efficiency and teamwork.",
                 exp_utrgv: "Mentored 300+ students in Python and ML, refining methods to make complex topics accessible.",
                 exp_lab: "Managed 50+ machines(3D Prints, 3D Scanners, Drones etc) and first developed my passion for teaching by creating 10+ engineering workshops for 100 students.",
@@ -435,7 +436,7 @@
                 case2_desc: "<p>Leading a 4-technician maintenance team taught me that technical skill alone isn't enough. I had to not only solve problems but also train my team to do the same. This was my first real taste of teaching – the challenge of transferring complex knowledge clearly and effectively under pressure.</p>",
                 case3_title: "Chapter 3: The Spark of Education",
                 case3_role: "University Lab Technician & Instructor",
-                case3_desc: `<p>This role was a turning point. While managing a lab of over 50 machines, I <strong class="text-lg text-sky-400">developed and taught more than 10 new engineering workshops to over 100 students</strong>, covering everything from 3D printing to robotics. I also led a student team to build a 3D-printed robot arm and mentored university startups on prototyping. It was here I discovered my true passion: <strong class="text-lg text-sky-400">making complex technology accessible and empowering people through hands-on education.</strong></p>`,
+                case3_desc: `<p>This role was a turning point. While managing a lab of over 50 machines, I <strong class="text-lg text-sky-400">developed and taught more than 10 new engineering workshops to over 100 students</strong>, covering everything from 3D printing and robotics to drones. I also led a student team to build a 3D-printed robot arm and mentored university startups on prototyping. It was here I discovered my true passion: <strong class="text-lg text-sky-400">making complex technology accessible and empowering people through hands-on education.</strong></p>`,
                 case4_title: "Chapter 4: The Confirmation",
                 case4_role: "AI Researcher at UTRGV",
                 case4_desc: `<p>As part of a USDA research project, I played a key role in the early stages of developing a honey bee monitoring system. My contributions included <strong class="text-sky-400">hardware redesign, creating a remote video recording script for data collection, labeling the collected data, and writing the initial code to train a bee detection model</strong> using TensorFlow on a Jetson Nano. This experience confirmed my ability to apply AI to solve real-world problems from the ground up.</p>`,
@@ -483,7 +484,7 @@
                 experience_title: "Experiencia Profesional",
                 experience_subtitle: "Una cronología de mis roles y responsabilidades clave.",
                 exp_language: "Imparto clases de coreano, diseñando planes de lecciones y creando materiales atractivos para fomentar la adquisición del idioma y la comprensión cultural.",
-                exp_outlier: "Actualmente afinando grandes modelos de lenguaje, centrándome en crear datos de entrenamiento claros y efectivos.",
+                exp_outlier: "Afiné grandes modelos de lenguaje, centrándome en crear datos de entrenamiento claros y efectivos.",
                 exp_burlington: "Desempeñé un papel clave en el exitoso lanzamiento de una nueva tienda. Adquirí experiencia práctica en todas las fases, desde logística de almacén y organización del piso de ventas hasta brindar servicio al cliente bilingüe como cajero, perfeccionando habilidades en eficiencia operativa y trabajo en equipo.",
                 exp_utrgv: "Guié a más de 300 estudiantes en Python y ML, refinando métodos para hacer accesibles temas complejos.",
                 exp_lab: "Administré más de 50 máquinas(3D prints, 3D scanners, Drones) y desarrollé mi pasión por la enseñanza al crear más de 10 talleres de ingeniería para 100 estudiantes.",
@@ -501,7 +502,7 @@
                 case2_desc: "<p>Liderar un equipo de mantenimiento de 4 técnicos me enseñó que la habilidad técnica por sí sola no es suficiente. No solo tenía que resolver problemas, sino también entrenar a mi equipo para hacer lo mismo. Esta fue mi primera experiencia real con la enseñanza: el desafío de transferir conocimientos complejos de manera clara y efectiva bajo presión.</p>",
                 case3_title: "Capítulo 3: La Chispa de la Educación",
                 case3_role: "Técnico de Laboratorio e Instructor Universitario",
-                case3_desc: `<p>Este rol fue un punto de inflexión. Mientras gestionaba un laboratorio de más de 50 máquinas, <strong class="text-lg text-sky-400">desarrollé e impartí más de 10 nuevos talleres de ingeniería práctica a más de 100 estudiantes</strong>, cubriendo desde impresión 3D hasta robótica. También lideré un equipo estudiantil para construir un brazo robótico impreso en 3D y asesoré a startups universitarias en prototipado. Fue aquí donde descubrí mi verdadera pasión: <strong class="text-lg text-sky-400">hacer la tecnología compleja accesible y empoderar a las personas mediante la educación práctica.</strong></p>`,
+                case3_desc: `<p>Este rol fue un punto de inflexión. Mientras gestionaba un laboratorio de más de 50 máquinas, <strong class="text-lg text-sky-400">desarrollé e impartí más de 10 nuevos talleres de ingeniería a más de 100 estudiantes</strong>, cubriendo desde impresión 3D y robótica hasta drones. También lideré un equipo estudiantil para construir un brazo robótico impreso en 3D y asesoré a startups universitarias en prototipado. Fue aquí donde descubrí mi verdadera pasión: <strong class="text-lg text-sky-400">hacer la tecnología compleja accesible y empoderar a las personas mediante la educación práctica.</strong></p>`,
                 case4_title: "Capítulo 4: La Confirmación",
                 case4_role: "Investigador de IA en UTRGV",
                 case4_desc: `<p>Como parte de un proyecto de investigación del USDA, desempeñé un papel clave en las etapas iniciales del desarrollo de un sistema de monitoreo de abejas. Mis contribuciones incluyeron el <strong class="text-sky-400">rediseño de hardware, la creación de un script de grabación de video remota para la recolección de datos, el etiquetado de los datos recopilados y la escritura del código inicial para entrenar un modelo de detección de abejas</strong> usando TensorFlow en un Jetson Nano. Esta experiencia confirmó mi capacidad para aplicar la IA para resolver problemas del mundo real desde cero.</p>`,
@@ -549,7 +550,7 @@
                 experience_title: "주요 경력",
                 experience_subtitle: "저의 주요 역할과 책임에 대한 타임라인입니다.",
                 exp_language: "다양한 수준의 학생들을 위해 수업 계획을 설계하고, 언어 습득과 문화 이해를 돕는 매력적인 교육 자료를 개발하며 한국어 수업을 진행합니다.",
-                exp_outlier: "현재 대규모 언어 모델을 미세 조정하며, 명확하고 효과적인 학습 데이터를 만드는 데 집중하고 있습니다.",
+                exp_outlier: "대규모 언어 모델을 미세 조정하며, 명확하고 효과적인 학습 데이터를 만드는 데 집중했습니다.",
                 exp_burlington: "신규 매장 오픈의 성공적인 런칭에 핵심적인 역할을 수행했습니다. 물류 창고 관리, 매장 진열부터 이중 언어 고객 서비스까지 모든 단계에 직접 참여하며 운영 효율성과 팀워크 역량을 강화했습니다.",
                 exp_utrgv: "300명 이상의 학생들에게 파이썬과 머신러닝을 가르치며 복잡한 주제를 쉽게 전달하는 방법을 다듬었습니다.",
                 exp_lab: "50대 이상의 장비((3D프린터, 3D 스캐너, 드론 등)를 관리하고, 100명 이상의 학생들을 위한 엔지니어링 워크숍을 만들고 가르치며 교육에 대한 열정을 처음 발견했습니다.",
@@ -567,7 +568,7 @@
                 case2_desc: "<p>4명의 기술자로 구성된 정비팀을 이끌면서 기술만으로는 충분하지 않다는 것을 배웠습니다. 문제를 해결할 뿐만 아니라 팀원들이 같은 일을 할 수 있도록 훈련시켜야 했습니다. 이것이 저의 첫 번째 진정한 교육 경험이었습니다. 압박감 속에서 복잡한 지식을 명확하고 효과적으로 전달하는 도전이었죠.</p>",
                 case3_title: "3장: 교육의 불꽃",
                 case3_role: "대학 실험실 기술자 및 강사",
-                case3_desc: `<p>이 역할은 전환점이었습니다. 50대 이상의 기계를 관리하면서, <strong class="text-lg text-sky-400">100명 이상의 대학생들에게 10개 이상의 새로운 실습 중심 엔지니어링 워크숍을 개발하고 가르쳤습니다</strong>. 3D 프린팅부터 로보틱스까지 모든 것을 다루었습니다. 또한 학생 팀을 이끌어 3D 프린팅 로봇 팔을 제작하고 대학 스타트업들의 프로토타입 제작을 멘토링했습니다. 바로 이곳에서 저는 제 진정한 열정을 발견했습니다: <strong class="text-lg text-sky-400">복잡한 기술을 쉽게 접할 수 있게 만들고, 직접 해보는 교육을 통해 사람들에게 힘을 실어주는 것.</strong></p>`,
+                case3_desc: `<p>이 역할은 전환점이었습니다. 50대 이상의 기계를 관리하면서, <strong class="text-lg text-sky-400">100명 이상의 학생들에게 10개 이상의 새로운 실습 중심 엔지니어링 워크숍을 개발하고 가르쳤습니다</strong>. 3D 프린팅, 로보틱스부터 드론까지 모든 것을 다루었습니다. 또한 학생 팀을 이끌어 3D 프린팅 로봇 팔을 제작하고 대학 스타트업들의 프로토타입 제작을 멘토링했습니다. 바로 이곳에서 저는 제 진정한 열정을 발견했습니다: <strong class="text-lg text-sky-400">복잡한 기술을 쉽게 접할 수 있게 만들고, 직접 해보는 교육을 통해 사람들에게 힘을 실어주는 것.</strong></p>`,
                 case4_title: "4장: 확신",
                 case4_role: "UTRGV AI 연구원",
                 case4_desc: `<p>UTRGV에서 USDA 연구에 참여하며, 제 기술을 실제 문제 해결에 적용했습니다. 저는 <strong class="text-sky-400">Jetson Nano 기반의 꿀벌 모니터링 시스템 개발 초기 단계에 핵심적으로 기여</strong>했습니다. 하드웨어 재설계에 참여하고, 데이터 수집을 위한 원격 영상 녹화 코드를 작성했으며, 수집된 영상 데이터에 레이블을 달고, TensorFlow를 이용해 꿀벌 탐지 모델의 초기 코드를 작성했습니다. 이 경험은 AI 기술을 이용해 현실의 문제를 해결할 수 있다는 확신을 주었습니다.</p>`,
