--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="bg-slate-800 p-6 rounded-xl">
                     <h3 class="text-xl font-poppins font-bold text-white mb-3" data-lang="skills_cat3_title">Engineering & Prototyping</h3>
                     <ul class="text-slate-400 space-y-2">
-                        <li><strong class="text-slate-300">CAD & Fabrication:</strong> SolidWorks, 3D Printing, CNC</li>
+                        <li><strong class="text-slate-300">CAD & Fabrication:</strong> SolidWorks, 3D Printing, 3D Scanner, CNC</li>
                         <li><strong class="text-slate-300">Systems:</strong> Robotics, Drones, Motion Capture</li>
                     </ul>
                 </div>
