--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <h3 class="text-xl font-poppins font-bold text-white mb-3" data-lang="skills_cat3_title">Engineering & Prototyping</h3>
                     <ul class="text-slate-400 space-y-2">
                         <li><strong class="text-slate-300">CAD & Fabrication:</strong> SolidWorks, 3D Printing, 3D Scanner, CNC</li>
-                        <li><strong class="text-slate-300">Systems:</strong> Robotics, Drones, Motion Capture</li>
+                        <li><strong class="text-slate-300">Systems:</strong> Robotics, Drones, VR, Motion Capture</li>
                     </ul>
                 </div>
             </div>
