--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
                             <span class="tech-tag">3D Printing</span>
                             <span class="tech-tag">Robotics</span>
                             <span class="tech-tag">Drones</span>
+                            <span class="tech-tag">VR</span>
                             <span class="tech-tag">Curriculum Development</span>
                             <span class="tech-tag">Mentorship</span>
                         </div>
