--- a/index.html
+++ b/index.html
@@ -351,8 +351,10 @@
                             <span class="tech-tag">Leadership</span>
                             <span class="tech-tag">EdTech</span>
                         </div>
-                        <div class="mt-4">
+                        <div class="mt-4 space-x-4">
                             <a href="https://sites.google.com/view/utrgvai" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case7_link">Visit the AI Club Website </a>
+
+                            <a href="https://www.youtube.com/@UTRGVAI" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case7_youtube_link">Visit the AI Club Youtube</a>
                         </div>
                     </div>
                 </div>
@@ -454,6 +456,7 @@
                 case7_role: "Founder of the UTRGV AI Club",
                 case7_desc: `<p>I founded the AI Club not just to make technology accessible, but also to <strong class="text-sky-400">bridge the information gap between academic theory and industry practice that I experienced as an undergraduate.</strong> It's a community built on the belief that anyone can innovate with the right guidance and a hands-on approach—a principle I discovered through my own path from engineer to educator.</p>`,
                 case7_link: "Visit the AI Club Website ",
+                case7_youtube_link: "Visit the AI Club Youtube",
                 philosophy_title: "My Guiding Philosophy",
                 philosophy_subtitle: "Learning by Building",
                 philosophy_desc: "My philosophy isn't a theory; it's the result of my journey. I believe in learning by doing, making complex ideas simple through real-world application, and empowering others with the confidence to build their own solutions. This practical, hands-on approach guides everything I do.",
@@ -520,6 +523,7 @@
                 case7_role: "Fundador del Club de IA de UTRGV",
                 case7_desc: `<p>Fundé el Club de IA no solo para hacer la tecnología accesible, sino también para <strong class="text-sky-400">cerrar la brecha de información entre la teoría académica y la práctica de la industria que experimenté como estudiante de pregrado.</strong> Es una comunidad construida sobre la creencia de que cualquiera puede innovar con la guía adecuada y un enfoque práctico, un principio que descubrí a través de mi propio camino de ingeniero a educador.</p>`,
                 case7_link: "Visitar el Sitio Web del Club de IA ",
+                case7_youtube_link: "Visitar el Sitio Youtube del Club de IA ",
                 philosophy_title: "Mi Filosofía Rectora",
                 philosophy_subtitle: "Aprender Construyendo",
                 philosophy_desc: "Mi filosofía no es una teoría; es el resultado de mi viaje. Creo en aprender haciendo, en simplificar ideas complejas a través de la aplicación en el mundo real y en empoderar a otros con la confianza para construir sus propias soluciones. Este enfoque práctico y directo guía todo lo que hago.",
@@ -586,6 +590,7 @@
                 case7_role: "UTRGV AI 클럽 설립자",
                 case7_desc: `<p>AI 클럽을 설립한 이유는 단순히 기술을 전파하기 위함만이 아닙니다. 제가 학부 시절 겪었던 <strong class="text-sky-400">이론과 산업 현장 간의 정보 격차를 해소하고, 후배들이 더 많은 기회를 잡을 수 있도록 돕고 싶었습니다.</strong> 올바른 지도와 실습 접근만 있다면 누구나 혁신할 수 있다는 믿음, 엔지니어에서 교육자로 이어진 저의 길을 통해 발견한 원칙으로 커뮤니티를 만들고 있습니다.</p>`,
                 case7_link: "AI 클럽 웹사이트 방문하기 ",
+                case7_youtube_link: "AI 클럽 웹사이트 방문하기 ",
                 philosophy_title: "나의 지침 철학",
                 philosophy_subtitle: "만들면서 배우기",
                 philosophy_desc: "저의 철학은 이론이 아니라 제 여정의 결과물입니다. 저는 직접 해보면서 배우고, 실제 적용을 통해 복잡한 아이디어를 단순하게 만들며, 다른 사람들이 자신만의 솔루션을 구축할 수 있는 자신감을 갖도록 힘을 실어주는 것을 믿습니다. 이 실용적이고 직접적인 접근 방식이 제가 하는 모든 일을 이끌어갑니다.",
