--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
                             <span class="tech-tag">Generative AI</span>
                         </div>
                         <div class="mt-4 space-x-4">
+                            <a href="https://www.finitup.com/" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case6_link_finitup">Visit the Finitup Website</a>
                             <a href="https://github.com/8park/fin-dss" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case6_link_github">View on GitHub</a>
                         </div>
                     </div>
@@ -451,6 +452,7 @@
                 case6_title: "Chapter 6: The Synthesis",
                 case6_role: "Founder & Developer of FinitUp",
                 case6_desc: `<p>FinitUp is my ongoing project to translate business theory into a tangible product. The goal is to <strong class="text-sky-400">automate the valuation models I learned in my MBA finance classes using AI, aiming to reduce analysis time by 90% compared to manual methods.</strong> This is my 'Learning by Building' philosophy in action, merging my entire skillset to create value.</p><p class="mt-2">I'm building upon the open-source work of the AI4Finance Foundation (FinRL, FinRobot) to implement automated analysis, recommendations, and virtual trading.</p>`,
+                case6_link_finitup: "Visit the Finitup Website"
                 case6_link_github: "View on GitHub",
                 case7_title: "Chapter 7: The Current Mission",
                 case7_role: "Founder of the UTRGV AI Club",
@@ -518,6 +520,7 @@
                 case6_title: "Capítulo 6: La Síntesis",
                 case6_role: "Fundador y Desarrollador de FinitUp",
                 case6_desc: `<p>FinitUp es mi proyecto en curso para traducir la teoría empresarial en un producto tangible. El objetivo es <strong class="text-sky-400">automatizar los modelos de valoración que aprendí en mis clases de finanzas de MBA usando IA, con el fin de reducir el tiempo de análisis en un 90% en comparación con los métodos manuales.</strong> Esta es mi filosofía de 'Aprender Construyendo' en acción, fusionando todo mi conjunto de habilidades para crear valor.</p><p class="mt-2">Estoy construyendo sobre el trabajo de código abierto de la AI4Finance Foundation (FinRL, FinRobot) para implementar análisis automatizado, recomendaciones y trading virtual.</p>`,
+                case6_link_finitup: "Visitar el Sitio Web del Finitup"
                 case6_link_github: "Ver en GitHub",
                 case7_title: "Capítulo 7: La Misión Actual",
                 case7_role: "Fundador del Club de IA de UTRGV",
@@ -585,6 +588,7 @@
                 case6_title: "6장: 종합",
                 case6_role: "FinitUp 설립자 및 개발자",
                 case6_desc: `<p>FinitUp은 비즈니스 이론을 실제 제품으로 구현하는 저의 현재 진행형 프로젝트입니다. 목표는 <strong class="text-sky-400">MBA 재무관리 수업에서 배운 가치평가모델을 AI로 자동화하여, 분석에 걸리는 시간을 수작업 대비 90% 단축하는 것</strong>입니다. 이것이야말로 저의 모든 기술을 통합하여 가치를 만드는 '만들면서 배우기' 철학의 실천입니다.</p><p class="mt-2">AI4Finance Foundation의 오픈소스(FinRL, FinRobot)를 기반으로 자동화 분석, 주식 추천 및 가상 매매 기능을 구현하고 있습니다.</p>`,
+                case6_link_finitup: "Finitup 웹사이트 방문하기"
                 case6_link_github: "GitHub에서 보기",
                 case7_title: "7장: 현재의 미션",
                 case7_role: "UTRGV AI 클럽 설립자",
