--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </div>
         </section>
         
-        <section id="casestudies" class="py-20">
+<section id="casestudies" class="py-20">
             <h2 class="section-title" data-lang="casestudies_title">My Path: From Engineer to Educator</h2>
             <p class="section-subtitle" data-lang="casestudies_subtitle">My interest in education grew naturally from my experiences as an engineer and leader. Each step of my journey revealed a new piece of the puzzle.</p>
             <div class="mt-16 space-y-20">
@@ -233,7 +233,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="flex flex-col md:flex-row-reverse items-center gap-10">
                     <div class="md:w-1/2">
                         <img src="images/military.jpg" alt="Military Leadership" class="rounded-xl shadow-lg w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=Military';">
@@ -270,8 +269,8 @@
                             <span class="tech-tag">Curriculum Development</span>
                             <span class="tech-tag">Mentorship</span>
                         </div>
-                        <div class="mt-4">
-                            <a href="https://youtube.com/playlist?list=PLaBzg96yMjUfdSrMQmCvsE9KdcH8DRn95&si=-acOohTN9O45zW6Q" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case3_playlist_link">View the Training Video Library</a>
+                        <div class="mt-6">
+                            <a href="https://youtube.com/playlist?list=PLaBzg96yMjUfdSrMQmCvsE9KdcH8DRn95&si=-acOohTN9O45zW6Q" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-700 hover:bg-slate-600 text-sky-300 font-semibold text-sm px-4 py-2 rounded-full transition-colors" data-lang="case3_playlist_link">View the Training Video Library</a>
                         </div>
                     </div>
                 </div>
@@ -292,9 +291,9 @@
                             <span class="tech-tag">Data Pipeline</span>
                             <span class="tech-tag">TensorFlow</span>
                         </div>
-                        <div class="mt-4 space-x-4">
-                            <a href="https://miutrgv.github.io/research/bee-monitoring.html" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case4_link">View the Research Project </a>
-                            <a href="https://ieeexplore.ieee.org/document/10903284" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case4_paper_link">View the Paper</a>
+                        <div class="mt-6 flex flex-wrap gap-4">
+                            <a href="https://miutrgv.github.io/research/bee-monitoring.html" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-700 hover:bg-slate-600 text-sky-300 font-semibold text-sm px-4 py-2 rounded-full transition-colors" data-lang="case4_link">View Research Project</a>
+                            <a href="https://ieeexplore.ieee.org/document/10903284" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-700 hover:bg-slate-600 text-sky-300 font-semibold text-sm px-4 py-2 rounded-full transition-colors" data-lang="case4_paper_link">View the Paper</a>
                         </div>
                     </div>
                 </div>
@@ -333,9 +332,9 @@
                             <span class="tech-tag">FinRL</span>
                             <span class="tech-tag">Generative AI</span>
                         </div>
-                        <div class="mt-4 space-x-4">
-                            <a href="https://www.finitup.com/" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case6_link_finitup">Visit the Finitup Website</a>
-                            <a href="https://github.com/8park/fin-dss" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case6_link_github">View on GitHub</a>
+                        <div class="mt-6 flex flex-wrap gap-4">
+                            <a href="https://www.finitup.com/" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-700 hover:bg-slate-600 text-sky-300 font-semibold text-sm px-4 py-2 rounded-full transition-colors" data-lang="case6_link_finitup">Visit Finitup Website</a>
+                            <a href="https://github.com/8park/fin-dss" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-700 hover:bg-slate-600 text-sky-300 font-semibold text-sm px-4 py-2 rounded-full transition-colors" data-lang="case6_link_github">View on GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -355,9 +354,9 @@
                             <span class="tech-tag">Leadership</span>
                             <span class="tech-tag">EdTech</span>
                         </div>
-                        <div class="mt-4 space-x-4">
-                            <a href="https://sites.google.com/view/utrgvai" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case7_link">Visit the AI Club Website </a>
-                            <a href="https://www.youtube.com/@UTRGVAI" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case7_youtube_link">Visit the AI Club Youtube</a>
+                        <div class="mt-6 flex flex-wrap gap-4">
+                            <a href="https://sites.google.com/view/utrgvai" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-700 hover:bg-slate-600 text-sky-300 font-semibold text-sm px-4 py-2 rounded-full transition-colors" data-lang="case7_link">Visit AI Club Website</a>
+                            <a href="https://www.youtube.com/@UTRGVAI" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-700 hover:bg-slate-600 text-sky-300 font-semibold text-sm px-4 py-2 rounded-full transition-colors" data-lang="case7_youtube_link">Visit AI Club Youtube</a>
                         </div>
                     </div>
                 </div>
